# rules_apollo_federation

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  defs.bzl  go.mod  go.sum
example/: MODULE.bazel
example/engineers/: schema.graphql
example/repositories/: schema.graphql
example/services/: schema.graphql
federation/private/: providers.bzl  subgraph.bzl  supergraph.bzl
federation/private/subgraph_validation/tar/: BUILD.bazel  main.go
federation/private/subgraph_validation/validate/: BUILD.bazel  main.go  utils.go
federation/private/supergraph/: BUILD.bazel  main.go
