load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tar_lib",
    srcs = ["main.go"],
    importpath = "github.com/srmocher/rules_apollo_federation/federation/private/subgraph_validation/tar",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "tar",
    embed = [":tar_lib"],
    visibility = ["//visibility:public"],
)
